# raytracing

./: CMakeLists.txt  LICENSE
src/: camera.cc  camera.hpp  hittable.hpp  main.cc  ray.hpp  threadpool.hpp  types.hpp
